@@ -6,7 +6,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -20,8 +19,8 @@ public class CorsConfig {
         config.setAllowCredentials(true);
         //Cambiar esto por la URL del frontend (ej. http://localhost:5173)
         config.setAllowedOriginPatterns(List.of("*")); 
-        config.setAllowedHeaders(Arrays.asList("Origin", "Content-Type", "Accept", "Authorization"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowedMethods(List.of("*"));
         
         source.registerCorsConfiguration("/**", config);
         return new CorsFilter(source);
